# openbmc-gxp-fru-device

./: CMakeLists.txt  README.md
service_files/: xyz.openbmc_project.GxpFruDevice.service
src/: GxpFruDevice.cpp
